can not add data to local json file

--- a/CanstarTest/src/app/data-company/data-company.component.html
+++ b/CanstarTest/src/app/data-company/data-company.component.html
@@ -5,27 +5,12 @@
     <th>Contact</th>
     <th>Business</th>
   </tr>
-  <tr>
-    <td>RACQ</td>
-    <td>123230</td>
-    <td>Car</td>
-  </tr>
-  <tr>
-    <td>AAMI</td>
-    <td>23123123</td>
-    <td>House</td>
-  </tr>
-  <tr>
-    <td>Suncorp</td>
-    <td>8979877868</td>
-    <td>Car</td>
-  </tr>
-  <tr>
-    <td>Medicare</td>
-    <td>23423432</td>
-    <td>Health</td>
-  </tr>
 
-
+  <tr *ngFor="let coms of companies">
+    <td>{{coms.name}}</td>
+    <td>{{coms.telephone}}</td>
+    <td>{{coms.business}}</td>
+  </tr>
 </table>
+
 <button type="submit" class="btn btn-success">Add New</button>
