--- a/CanstarTest/src/app/data-company/data-company.component.html
+++ b/CanstarTest/src/app/data-company/data-company.component.html
@@ -1,6 +1,5 @@
-<h4>Input insurance company</h4>
-<table>
-  <tr>
+<table class="w3-table w3-blue">
+  <tr >
     <th>Company</th>
     <th>Contact</th>
     <th>Business</th>
@@ -13,4 +12,3 @@
   </tr>
 </table>
 
-<button type="submit" class="btn btn-success">Add New</button>
