--- a/CanstarTest/src/app/footer/footer.component.html
+++ b/CanstarTest/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer>
-  footer works!
-</footer>
+<mat-toolbar color="primary">
+  <mat-icon class="example-icon">verified_user</mat-icon> Built by Lambert
+  </mat-toolbar>
