--- a/CanstarTest/src/app/insurance-company/insurance-company.component.html
+++ b/CanstarTest/src/app/insurance-company/insurance-company.component.html
@@ -1,9 +1,8 @@
-<h1>
-  Input your favourite insurance company
-</h1>
+
 <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm.value)">
 
-<input type="text"
+  <label class="w3-text-blue"><b>Company Name</b></label>
+<input class="w3-input w3-border w3-light-grey" type="text"
        required
        minlength="3"
        name="name"
@@ -14,19 +13,24 @@
   name length must have at least {{companyname.errors?.minlength.requiredLength}}，current length
   {{companyName.errors?.minlength.actualLength}}
 </div>
-    <input type="text"
+    <label class="w3-text-blue"><b>Phone</b></label>
+    <input class="w3-input w3-border w3-light-grey"
+           type="text"
            required
            minlength="3"
            name="telephone"
            [(ngModel)]="telephone"
            #userName="ngModel">
-    <input type="text"
+    <label class="w3-text-blue"><b>Main Business</b></label>
+    <input class="w3-input w3-border w3-light-grey"
+           type="text"
            required
            minlength="3"
            name="business"
            [(ngModel)]="business"
            #userName="ngModel">
 
-<button type="submit">submit</button>
+<button class="w3-btn w3-blue"
+type="submit">submit</button>
   {{loginForm.value | json}}
 </form>
